cria botao do novo vingador

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   
-    
+  <button id="homem-de-ferro">Homem de ferro </button>  
 <button id="lutar">lutar</button>
 
     <script src="./bundle.js"></script>
